food component alignment fix

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -127,7 +127,7 @@ margin-top: -20px;
 .footerTxtContent > div{
   height: 200px;
   width: 200px;
-  border: 1px red solid;
+  /* border: 1px red solid; */
   margin-left: auto;
   display: flex;
   flex-direction: column;
